Generalize GC/JFR canvas to any Java project via Copilot-driven runs
The extension no longer hard-codes the JairoSVG benchmark. Runs are now
Copilot-driven and project-agnostic:

- Run analysis button injects a prompt (session.send) asking Copilot to detect
  the build tool + JDK, run a representative workload with GC logging + JFR
  (JDK-version-correct flags), and hand the artifacts back.
- New agent tool gc_jfr_ingest({ gcLogPath, jfrPath?, label? }) analyzes the
  provided artifacts with GCToolkit + the jfr CLI, copies them into a
  self-contained runs/<id>/, and broadcasts results to the canvas.
- pipeline.mjs: runPipeline -> analyzeArtifacts (no mvn/benchmark run).
- prompt.mjs: add buildRunPrompt; buildAnalysisPrompt no longer benchmark-specific.
- web/: generic config (workload hint + JFR size), persistent SSE so
  ingest-triggered results render anytime, report shows label + GC log source.
- README rewritten for the generic Copilot-driven flow.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>